syntax = "proto3";
package services;

message InformNewPlayerRequest {
    string newPlayerEndpoint = 1;
    int32 positionX = 2;
	int32 positionY = 3;
}

message CanIbeSeekerRequest {
    string senderEndpoint = 1;
	int32 playerId = 2;
	int32 positionX = 3;
	int32 positionY = 4;
}

message ChangePositionOrStatusRequest {
	string targetEndpoint = 1;
	int32 positionX = 2;
	int32 positionY = 3;
	string status = 4;
	bool isSentBySeeker = 5;
}

message InformGameTerminationRequest {
	string senderEndpoint = 1;
}

message AcquireSharedResourceRequest {
	string senderEndpoint = 1;
	int32 playerId = 2;
	int64 timestamp = 3;
	string sharedResourceName = 4;
}

message InformReleasedSharedResourceRequest {
	string senderEndpoint = 1;
	string sharedResourceName = 2;
}

message InformNewPlayerResponse {
    int32 positionX = 1;
	int32 positionY = 2;
	string status = 3;
	string currentGamePhase = 4;
}

message GenericResultResponse {
    bool result = 1;
}

service PlayerService {
    rpc InformNewPlayer(InformNewPlayerRequest) returns (InformNewPlayerResponse);
    rpc CanIbeSeeker (CanIbeSeekerRequest) returns (GenericResultResponse);
	rpc InformGameTermination (InformGameTerminationRequest) returns (GenericResultResponse);
	rpc AcquireSharedResource (AcquireSharedResourceRequest) returns (GenericResultResponse);
	rpc InformReleasedSharedResource (InformReleasedSharedResourceRequest) returns (GenericResultResponse);
    rpc ChangePositionOrStatusStream(stream ChangePositionOrStatusRequest) returns (GenericResultResponse);
}
